cronjob-api/guess-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guess-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: guess-server
  template:
    metadata:
      labels:
        app: guess-server
    spec:
      containers:
      - name: guess-server
        image: avramstefan/guess:1.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: guess-server
spec:
  selector:
    app: guess-server
  ports:
  - port: 5000
    targetPort: 5000
